--- a/index.html
+++ b/index.html
@@ -67,9 +67,18 @@
         <hr>
         <h2>My Projects</h2>
         <section class="projects">
-
+            <div class="blog">
+                <img class="pic1" src="/styles/projectimg/blog/home_before.png" alt="">
+                <img class="pic2" src="/styles/projectimg/blog/about.png" alt="">
+                <img class="pic3" src="/styles/projectimg/blog/contact.png" alt="">
+                <img class="pic4" src="/styles/projectimg/blog/compose.png" alt="">
+                <img class="pic5" src="/styles/projectimg/blog/register.png" alt="">
+                <img class="pic6" src="/styles/projectimg/blog/home_after.png" alt="">
+                <img class="pic7" src="/styles/projectimg/blog/dark.png" alt="">
+            </div>
         </section>
     </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="/styles/style.js"></script>
 </body>
