some changes in html and css

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <hr>
         <h2>My Projects</h2>
         <section class="projects">
+            <h4>Blog WebApp</h4>
             <div class="blog">
                 <img class="pic1" src="/styles/projectimg/blog/home_before.png" alt="">
                 <img class="pic2" src="/styles/projectimg/blog/about.png" alt="">
