few new commits

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                      </p> 
                      <img src="/styles/img/Chhatrapati_Shahu_Ji_Maharaj_University_logo (1).png" alt="">
                 </div>
-                <div class="mid">
-                    <img src="/styles/img/me.jpg" alt="">
+                <!-- <div class="mid">
+                    <img src="/styles/img/.jpg" alt="No pic">
                     <p>This is me</p>
-                </div>
+                </div> -->
                 <div class="right">
                     <p>
                         I did my <span>MCA</span> from,  Veer Bahadur Singh Purvanchal University, Jaunpur
@@ -80,7 +80,7 @@
         </section>
     </main>
     <footer id="foot">
-
+<div>
            <div class="call"><p><svg height="30px" width="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             viewBox="0 0 511.999 511.999" xml:space="preserve">
        <path style="fill:#B0DACC;" d="M342.315,337.711l-25.981,25.977c-2.223-1.212-4.625-2.415-7.048-3.777
@@ -120,7 +120,7 @@
                C415.045,256.647,409.187,258.505,403.287,258.505z"/>
        </g>
        </svg>&nbsp;&nbsp;7704880846</p></div> 
-       <p>made by Shashank</p>
+       
             <div class="mail"><p><svg height="30px" width="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
                 viewBox="0 0 512.002 512.002" xml:space="preserve">
            <path style="fill:#95D6A6;" d="M418.91,201.923c-7.464-3.556-15.239-6.555-23.273-8.954c-7.543-2.254-15.317-3.973-23.273-5.117
@@ -185,8 +185,10 @@
                v-23.273h-23.273c-12.853,0-23.273-10.42-23.273-23.273c0-12.853,10.42-23.273,23.273-23.273h23.273v-23.273
                c0-12.853,10.42-23.273,23.273-23.273v-93.091C284.235,186.182,228.115,224.284,201.923,279.273z"/>
            </svg>&nbsp;&nbsp;shashankpandit2018@gmail.com</p></div>
-        
-
+           <p><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="35px" height="35px"><path fill="#0288D1" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"/><path fill="#FFF" d="M12 19H17V36H12zM14.485 17h-.028C12.965 17 12 15.888 12 14.499 12 13.08 12.995 12 14.514 12c1.521 0 2.458 1.08 2.486 2.499C17 15.887 16.035 17 14.485 17zM36 36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698-1.501 0-2.313 1.012-2.707 1.99C24.957 25.543 25 26.511 25 27v9h-5V19h5v2.616C25.721 20.5 26.85 19 29.738 19c3.578 0 6.261 2.25 6.261 7.274L36 36 36 36z"/></svg><a href="https://www.linkedin.com/in/shashank-mishra-a097721b8/">linkedin</a></p>
+           <p id="github"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="30px" height="30px" id="github"><linearGradient id="a" x1="16" x2="16" y1="32" y2="0" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#ff2d76"></stop><stop offset="1" stop-color="#fb0000"></stop></linearGradient><path fill="url(#a)" d="M21.806 32h-8.529s.012-2.531 0-4.267c-5.838 1.257-7.467-3.2-7.467-3.2-1.067-2.133-2.133-3.2-2.133-3.2-2.133-1.267 0-1.067 0-1.067 2.133 0 3.2 2.133 3.2 2.133 1.872 3.179 5.203 2.667 6.4 2.133 0-1.067.467-2.679 1.067-3.2-4.659-.525-8.538-3.2-8.538-8.533s1.071-6.4 2.138-7.467C7.728 4.807 6.835 2.864 7.976 0c0 0 2.096 0 4.229 3.2 1.057-1.057 4.267-1.067 5.334-1.067 1.065 0 4.275.01 5.331 1.067C25.005 0 27.106 0 27.106 0c1.14 2.864.249 4.807.032 5.333 1.067 1.067 2.133 2.133 2.133 7.467s-3.873 8.009-8.533 8.533c.601.521 1.067 2.356 1.067 3.2V32h.001z"></path></svg><a href="https://github.com/ShashankMishra09">github</a></p>
+</div>        
+<p>made by Shashank</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
